tests/miniJava/neg/005693_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } false class java { }
